syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "EquipRelic.proto";
import "AvatarSkillTree.proto";

message Avatar {
	bool is_marked = 2;
	uint32 base_avatar_id = 8;
	repeated AvatarSkillTree skilltree_list = 14;
	uint32 equipment_unique_id = 11;
	repeated EquipRelic equip_relic_list = 7;
	uint32 rank = 1;
	uint64 first_met_timestamp = 9;
	uint32 promotion = 6;
	repeated uint32 taken_rewards = 13;
	uint32 dressed_skin_id = 10;
	uint32 level = 3;
	uint32 exp = 4;
}

