syntax = "proto3";
//
option java_package = "emu.lunarcore.proto";

message EquipRelic {
	uint32 slot = 3;
	uint32 relic_unique_id = 15;
}