syntax = "proto3";
//  all done
option java_package = "emu.lunarcore.proto";

message Item {
	uint32 Promotion = 6;
	uint32 MainAffixId = 1;
	uint32 UniqueId = 8;
	uint32 Rank = 5;
	uint32 ItemId = 7;
	uint32 Level = 14;
	uint32 Num = 13;
}