syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message LockEquipmentCsReq {
	repeated uint32 equipment_id_list = 15;
	bool is_protected = 12;
}

