syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "MazeGroup.proto";
import "MazeChest.proto";
import "MazeProp.proto";

message MazeMapData {
	repeated MazeProp maze_prop_list = 5;
	uint32 floor_id = 3;
	repeated uint32 unlocked_teleport_list = 12;
	uint32 LMEEFKJBPEC = 10;
	repeated MazeGroup maze_group_list = 11;
	uint32 retcode = 14;
	repeated uint32 lighten_section_list = 4;
	repeated MazeChest unlocked_chest_list = 15;
	uint32 entry_id = 7;
	uint32 dimension_id = 9;
	map<string, int32> floor_saved_data = 6;
}

