syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "DynamicValue.proto";
import "AssistMonsterWave.proto";
import "SceneCastSkill.proto";
import "MotionInfo.proto";

message SceneCastSkillCsReq {
	uint32 HCHDHLJCIJE = 1;
	repeated uint32 hit_target_entity_id_list = 2;
	uint32 attacked_group_id = 14;
	repeated AssistMonsterWave assist_monster_wave_list = 10;
	repeated SceneCastSkill skill_extra_tags = 11;
	uint32 skill_index = 12;
	uint32 caster_id = 8;
	MotionInfo target_motion = 9;
	repeated DynamicValue dynamic_values = 3;
	repeated uint32 assist_monster_entity_id_list = 4;
	string maze_ability_str = 15;
}

