syntax = "proto3";
//done
option java_package = "emu.lunarcore.proto";

import "NpcMonsterExtraInfo.proto";

message SceneNpcMonsterInfo {
	uint32 monster_id = 6;
	NpcMonsterExtraInfo extra_info = 1;
	uint32 scene_event_id = 15;
	bool IDPJIDNLEHH = 13;
	bool MPFEDFBKKDF = 2;
	uint32 world_level = 9;
}